--- a/src/index.html
+++ b/src/index.html
@@ -1,39 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Intro section with dropdown navigation</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Features
-  Company
-  Careers
-  About
-
-  Login
-  Register
-
-  Make remote work
-
-  Get your team in sync, no matter your location. Streamline processes, 
-  create team rituals, and watch productivity soar.
-
-  Learn more
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="scss/main.scss" />
+    <script defer src="./script.js"></script>
+    <title>Frontend Mentor | Intro section with dropdown navigation</title>
+  </head>
+  <body>
+    <nav class="nav">
+      <img class="nav__logo" src="./images/logo.svg" alt="snap logo" />
+      <button class="nav__hamburger">
+        <img src="./images/icon-menu.svg" alt="open menu icon" />
+      </button>
+      <ul class="nav__menu">
+        <li class="nav__item">
+          <a class="nav__item-anchor" href="#Features">Features</a>
+          <img
+            class="nav__item-arrow"
+            src="./images/icon-arrow-down.svg"
+            alt="arrow down icon"
+          />
+          <ul class="nav__item-list">
+            <li class="nav__item-list-el">
+              <img
+                class="nav__item-list-el-img"
+                src="./images/icon-todo.svg"
+                alt="note icon"
+              />
+              <a class="nav__item-list-anchor" href="#Todo-List"
+                >Todo List</a
+              >
+            </li>
+            <li class="nav__item-list-el">
+              <img
+                class="nav__item-list-el-img"
+                src="./images/icon-calendar.svg"
+                alt="calendar icon"
+              />
+              <a class="nav__item-list-anchor" href="#Calendar">Calendar</a>
+            </li>
+            <li class="nav__item-list-el">
+              <img
+                class="nav__item-list-el-img"
+                src="./images/icon-reminders.svg"
+                alt="notification icon"
+              />
+              <a class="nav__item-list-anchor" href="#Reminders"
+                >Reminders</a
+              >
+            </li>
+            <li class="nav__item-list-el">
+              <img
+                class="nav__item-list-el-img"
+                src="./images/icon-planning.svg"
+                alt="clock icon"
+              />
+              <a class="nav__item-list-anchor" href="#Planning">Planning</a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav__item">
+          <a class="nav__item-anchor" href="#Company">Company</a>
+          <img
+            class="nav__item-arrow"
+            src="./images/icon-arrow-down.svg"
+            alt="arrow down icon"
+          />
+          <ul class="nav__item-list">
+            <li class="nav__item-list-el">
+              <a class="nav__item-list-anchor" href="#History">History</a>
+            </li>
+            <li class="nav__item-list-el">
+              <a class="nav__item-list-anchor" href="#Our-Team">Our Team</a>
+            </li>
+            <li class="nav__item-list-el">
+              <a class="nav__item-list-anchor" href="#Blog">Blog</a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav__item">
+          <a class="nav__item-anchor" href="#Careers">Careers</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__item-anchor" href="#About">About</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__item-anchor" href="#Login">Login</a>
+        </li>
+        <li class="nav__item">
+          <button class="button button--outline nav__item-btn">Register</button>
+        </li>
+      </ul>
+    </nav>
+    <main class="hero">
+      <img
+        class="hero__img-mobile"
+        src="./images/image-hero-mobile.png"
+        alt="a men working on laptop"
+      />
+      <img
+        class="hero__img-desktop"
+        src="./images/image-hero-desktop.png"
+        alt="a men working on laptop"
+      />
+      <article class="hero__content">
+        <h1 class="hero__title">Make remote work</h1>
+        <p class="hero__info">
+          Get your team in sync, no matter your location. Streamline processes,
+          create team rituals, and watch productivity soar.
+        </p>
+        <button class="button button--fill hero__btn">Learn more</button>
+        <div class="hero__clients">
+          <img
+            class="hero__clients-img"
+            src="./images/client-databiz.svg"
+            alt="databiz company logo"
+          />
+          <img
+            class="hero__clients-img"
+            src="./images/client-audiophile.svg"
+            alt="audiophile company logo"
+          />
+          <img
+            class="hero__clients-img"
+            src="./images/client-meet.svg"
+            alt="meet company logo"
+          />
+          <img
+            class="hero__clients-img"
+            src="./images/client-maker.svg"
+            alt="maker company logo"
+          />
+        </div>
+      </article>
+    </main>
+  </body>
 </html>
