Format by Prettier

--- a/src/index.html
+++ b/src/index.html
@@ -37,12 +37,12 @@
             alt="arrow down icon"
           >
           <img
-            class="nav__item-arrow nav__item-arrow-up nav__item-arrow-up--hide"
+            class="nav__item-arrow nav__item-arrow-up"
             src="./images/icon-arrow-up.svg"
             alt="arrow up icon"
           >
           <ul class="nav__item-list nav__item-list-1">
-            <li class="nav__item-list-el">
+            <li>
               <img
                 class="nav__item-list-el-img"
                 src="./images/icon-todo.svg"
@@ -50,7 +50,7 @@
               >
               <a class="nav__item-list-anchor" href="#Todo-List">Todo List</a>
             </li>
-            <li class="nav__item-list-el">
+            <li>
               <img
                 class="nav__item-list-el-img"
                 src="./images/icon-calendar.svg"
@@ -58,7 +58,7 @@
               >
               <a class="nav__item-list-anchor" href="#Calendar">Calendar</a>
             </li>
-            <li class="nav__item-list-el">
+            <li>
               <img
                 class="nav__item-list-el-img"
                 src="./images/icon-reminders.svg"
@@ -66,7 +66,7 @@
               >
               <a class="nav__item-list-anchor" href="#Reminders">Reminders</a>
             </li>
-            <li class="nav__item-list-el">
+            <li>
               <img
                 class="nav__item-list-el-img"
                 src="./images/icon-planning.svg"
@@ -79,23 +79,23 @@
         <li class="nav__item">
           <a class="nav__item-anchor" href="#Company">Company</a>
           <img
-            class="nav__item-arrow"
+            class="nav__item-arrow nav__item-arrow-down"
             src="./images/icon-arrow-down.svg"
             alt="arrow down icon"
           >
           <img
-            class="nav__item-arrow nav__item-arrow-up nav__item-arrow-up--hide"
+            class="nav__item-arrow nav__item-arrow-up"
             src="./images/icon-arrow-up.svg"
             alt="arrow up icon"
           >
           <ul class="nav__item-list nav__item-list-2">
-            <li class="nav__item-list-el">
+            <li>
               <a class="nav__item-list-anchor" href="#History">History</a>
             </li>
-            <li class="nav__item-list-el">
+            <li>
               <a class="nav__item-list-anchor" href="#Our-Team">Our Team</a>
             </li>
-            <li class="nav__item-list-el">
+            <li>
               <a class="nav__item-list-anchor" href="#Blog">Blog</a>
             </li>
           </ul>
